remover warnings nos testes